get and create post type
