# backend/src/models/postType.js
@@ -6,13 +6,27 @@ const postyTypeSchema = mongoose.Schema(
       type: mongoose.SchemaTypes.ObjectId,
       ref: 'Community',
       required: true,
+      index: true,
     },
+    creator: { type: mongoose.SchemaTypes.ObjectId, ref: 'User', required: true, index: true },
+    name: {
+      type: String,
+      trim: true,
+      index: true,
+      required: true,
+      unique: true,
+    },
+    textFieldNames: [{ type: String }],
+    numberFieldNames: [{ type: String }],
+    dateFieldNames: [{ type: String }],
+    linkFieldNames: [{ type: String }],
+    locationFieldNames: [{ type: String }],
   },
   {
     timestamps: true,
   }
 );
 
-const PostType = mongoose.model('Post-Type', postyTypeSchema);
+const PostType = mongoose.model('Post_Type', postyTypeSchema);
 
 module.exports = PostType;
